--- a/ubuntu16.04/patch-5.3/Makefile
+++ b/ubuntu16.04/patch-5.3/Makefile
@@ -78,11 +78,13 @@ retrieve-packages:
 # toolchain builder
 
 build-toolchain: $(PACKAGE_FETCH_FILE)
-	BUILD_DIR=$(BUILD_DIR) FETCH_DIR=$(FETCH_DIR)	\
+	BUILD_DIR=$(BUILD_DIR) \
+	FETCH_DIR=$(FETCH_DIR)	\
 	SWIFT_VERSION=$(SWIFT_VERSION) 			\
 	TARGET_ARCH=$(TARGET_ARCH)			\
 	TARGET_PLATFORM=$(PLATFORM)			\
 	CROSS_TOOLCHAIN_NAME=$(CROSS_TOOLCHAIN_NAME)	\
 	HOST_PLATFORM=$(uname -m)			\
 	INSTALL_PREFIX=$(INSTALL_PREFIX)		\
+	SWIFT_LIB_DIR=$(SWIFT_LIB_DIR) \
 	./build-toolchain.sh
