Fix package list and local build.
This still doesn't work, but gets further.

--- a/ubuntu20.04/Makefile
+++ b/ubuntu20.04/Makefile
@@ -110,10 +110,10 @@ build-toolchain: $(PACKAGE_FETCH_FILE)
 testbuild:
 	rm -rf my-test-app
 	mkdir -p my-test-app && cd my-test-app && swift package init --type=executable
-	cd my-test-app && swift build --destination $(BUILD_DIR)/swift-$(VERSION)-$(PLATFORM).xtoolchain/destination.json
+	cd my-test-app && swift build --destination $(BUILD_DIR)/swift-$(MAIN_VERSION)-$(PLATFORM).xtoolchain/destination.json
 
 test-rebuild:
-	cd my-test-app && swift build --destination $(BUILD_DIR)/swift-$(VERSION)-$(PLATFORM).xtoolchain/destination.json
+	cd my-test-app && swift build --destination $(BUILD_DIR)/swift-$(MAIN_VERSION)-$(PLATFORM).xtoolchain/destination.json
 
 DOCKER_IMAGE=swift:5.3.3-focal
 
