--- a/ubuntu20.04/Makefile
+++ b/ubuntu20.04/Makefile
@@ -76,7 +76,7 @@ distclean: clean
 
 swift-5.3-patch: patch-5.3/build.patch
 
-patch-5.3/build.patch: Makefile retrieve-sdk-packages.sh build-toolchain.sh patch-5.3/Makefile
+patch-5.3/build.patch: packagelist.make Makefile retrieve-sdk-packages.sh build-toolchain.sh patch-5.3/Makefile
 	$(RM_RF) $@
 	$(RM_RF) $(PATCH_DIR)
 	$(MKDIR) -p $(PATCH_DIR)/empty
