--- a/ubuntu20.04/Makefile
+++ b/ubuntu20.04/Makefile
@@ -26,9 +26,15 @@ LINUX_TARGET_TRIPLE=$(ARCH)-linux-gnu
 PLATFORM=ubuntu20.04
 PACKAGE_URL=https://swift.org/builds/$(BRANCH)/$(subst .,,$(PLATFORM))/swift-$(VERSION)-$(SNAPSHOT)/swift-$(VERSION)-$(SNAPSHOT)-$(PLATFORM).tar.gz
 
+SWIFT_LIB_DIR=/usr/local/lib/swift
+HOST_SWIFT_TOOLCHAIN=/usr/local/lib/swift/xctoolchains/$(ARCH)-apple-darwin/$(HOST_VERSION)-current/swift.xctoolchain
+HOST_X_LLD=$(SWIFT_LIB_DIR)/clang-llvm/${HOST_PLATFORM}-apple-darwin/8.0.0/bin/lld
+
 BUILD_DIR=$(PWD)/.build
 FETCH_DIR=$(PWD)/.fetch
 PATCH_DIR=$(BUILD_DIR)/patch
+
+INSTALL_PREFIX=$(BUILD_DIR)
 
 DESTDIR_PREFIX=$(prefix)/lib/swift/dst/x86_64-unknown-linux/
 
@@ -106,7 +112,11 @@ retrieve-packages:
 # toolchain builder
 
 build-toolchain: $(PACKAGE_FETCH_FILE)
-	SWIFT_VERSION=$(MAIN_VERSION) ./build-toolchain.sh $(PWD)/.fetch/swift-$(VERSION)-$(PLATFORM).tar.gz
+	HOST_SWIFT_TOOLCHAIN=$(HOST_SWIFT_TOOLCHAIN) \
+	HOST_X_LLD=$(HOST_X_LLD) \
+	SWIFT_VERSION=$(MAIN_VERSION) \
+	INSTALL_PREFIX=$(INSTALL_PREFIX) \
+	./build-toolchain.sh $(PWD)/.fetch/swift-$(VERSION)-$(PLATFORM).tar.gz
 
 testbuild:
 	rm -rf my-test-app
